--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         loading="lazy">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/i8.JPG"
+                        <img src="./images/i8.jpg"
                         loading="lazy">
                     </div>
                     <div class="swiper-slide">
