--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="_csrf_parameter_name" th:content="${_csrf.parameterName}"/>
     <title>Thiệp cưới Nguyễn Thắng - Diễm Quỳnh</title>
     <meta name="description" content="Thay cho tấm thiệp hồng trao tay. Vợ chồng chúng tôi gửi tới bạn chiếc thiệp online xinh xinh này. Mong bạn bớt chút thời gian quý báu của mình tới dự tiệc, rất cảm ơn và vinh dự khi bạn hiện diện tại lễ cưới của vợ chồng chúng tôi.">
-    <meta property="og:title" content="Thiệp cưới Tiến Vũ - Ngọc Dung" />
+    <meta property="og:title" content="Thiệp cưới Nguyễn Thắng - Diễm Quỳnh" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://nguyentienvu4897.github.io/thu-moi-cuoi-Tien_Vu-Ngoc_Dung/images/image-content.jpg"/>
     <meta property="og:description" content="Thay cho tấm thiệp hồng trao tay. Vợ chồng chúng tôi gửi tới bạn chiếc thiệp online xinh xinh này. Mong bạn bớt chút thời gian quý báu của mình tới dự tiệc, rất cảm ơn và vinh dự khi bạn hiện diện tại lễ cưới của vợ chồng chúng tôi." />
@@ -217,33 +217,33 @@
         <div class="modal-content">
         <span class="close">&times;</span>
         <h1>Nguyễn Thắng - Diễm Quỳnh chân thành cảm ơn!!!</h1>
-        <div class="groom-bank">
-            <div class="img-bank">
-                <img src="./images/Logo_VCB.png" loading="lazy">
-            </div>
-            <div class="detail-bank">
-                <p>Vietcombank</p>
-                <p class="copy">STK: 1034123351 &nbsp;&nbsp;&nbsp;&nbsp;<span class="copy" 
-                    data-number="1034123351" onclick="myFunction(this)" onmouseout="outFunc(this)">
-                    <span class="tooltiptext">Copy to clipboard</span>
-                    <i class="fas fa-copy"></i>
-                </span></p>
-                <p>Chủ TK: Nguyễn Tiến Vũ</p>
-            </div>
-        </div>
-        <div class="bride-bank">
-            <div class="img-bank">
-                <img src="./images/Logo_TCB.png" loading="lazy">
-            </div>
-            <div class="detail-bank">
-                <p>Techcombank</p>
-                <p class="copy">STK: 19035227373015 &nbsp;&nbsp;&nbsp;&nbsp;<span class="copy" data-number="19035227373015" onclick="myFunction(this)" onmouseout="outFunc(this)">
-                    <span class="tooltiptext">Copy to clipboard</span>
-                    <i class="fas fa-copy"></i>
-                </span></p>
-                <p>Chủ TK: Nguyễn Thị Dung</p>
-            </div>
-        </div>
+<!--        <div class="groom-bank">-->
+<!--            <div class="img-bank">-->
+<!--                <img src="./images/Logo_VCB.png" loading="lazy">-->
+<!--            </div>-->
+<!--            <div class="detail-bank">-->
+<!--                <p>Vietcombank</p>-->
+<!--                <p class="copy">STK: 1034123351 &nbsp;&nbsp;&nbsp;&nbsp;<span class="copy" -->
+<!--                    data-number="1034123351" onclick="myFunction(this)" onmouseout="outFunc(this)">-->
+<!--                    <span class="tooltiptext">Copy to clipboard</span>-->
+<!--                    <i class="fas fa-copy"></i>-->
+<!--                </span></p>-->
+<!--                <p>Chủ TK: Nguyễn Tiến Vũ</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="bride-bank">-->
+<!--            <div class="img-bank">-->
+<!--                <img src="./images/Logo_TCB.png" loading="lazy">-->
+<!--            </div>-->
+<!--            <div class="detail-bank">-->
+<!--                <p>Techcombank</p>-->
+<!--                <p class="copy">STK: 19035227373015 &nbsp;&nbsp;&nbsp;&nbsp;<span class="copy" data-number="19035227373015" onclick="myFunction(this)" onmouseout="outFunc(this)">-->
+<!--                    <span class="tooltiptext">Copy to clipboard</span>-->
+<!--                    <i class="fas fa-copy"></i>-->
+<!--                </span></p>-->
+<!--                <p>Chủ TK: Nguyễn Thị Dung</p>-->
+<!--            </div>-->
+<!--        </div>-->
         </div>
     
     </div>
